src/test/resources/valid_tests/Fixed_ThreeInputCNN_M14.cnna
architecture Fixed_ThreeInputCNN_M14(){
    def input Z(0:255)^{3, 200, 300} image[3]
    def output Q(0:1)^{3} predictions

    def conv(filter, channels){
        Convolution(kernel=filter, channels=channels) ->
        Relu()
    }

    def inputGroup(index){
        [index] ->
        conv(filter=(3,3), channels=32, ->=3) ->
        Pooling(pool_type="max", kernel=(2,2), stride=(2,2))
    }

    image ->
    inputGroup(index=0|..|2) ->
    Concatenate() ->
    conv(filter=(3,3), channels=64) ->
    Pooling(pool_type="max", kernel=(2,2), stride=(2,2)) ->

    FullyConnected(units=32) ->
    Relu() ->
    FullyConnected(units=3) ->
    Softmax() ->
    predictions
}