src/test/resources/invalid_tests/WrongIOShape.cnna
architecture WrongIOShape{
    def input Q(-oo:+oo)^{inputs=10, 2} in
    def output Q(0:1)^{inputs=10, 2, 2, 2} out

    in ->
    FullyConnected(units=64) ->
    Tanh() ->
    FullyConnected(units=classes) ->
    Softmax() ->
    out
}